--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <script src="js/libs/knockout-3.2.0.js"></script>
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/script.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdHBWhJFMIpfAvDYEiX1dFg0vE3Ki1QQM&callback=initMap"
         async defer onerror="ErrorHandle()">
     </script>
 </body>
