--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 </footer>
 
 <script src="js/libs/knockout-3.2.0.js"></script>
-<script src="js/libs/jquery.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdHBWhJFMIpfAvDYEiX1dFg0vE3Ki1QQM&callback=initMap"
         async defer onerror="ErrorHandle()">
