jquery2.x.x and formatted script.js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdHBWhJFMIpfAvDYEiX1dFg0vE3Ki1QQM&callback=initMap"
-        async defer onerror="ErrorHandle()">
+        async defer onerror="errorHandle()">
     </script>
 </body>
 </html>
